overflow fixed

--- a/src/less/techsnippet.less
+++ b/src/less/techsnippet.less
@@ -9,11 +9,22 @@ background-size: cover;
 	margin:0;
 }
 
-.frontpage {
-	max-width:100%; 
-	/*height:100%;*/
-	position:absolute;
-	z-index:0;
+
+@media only screen and (min-width: 400px) {
+	.frontpage {
+		max-width:100%; 
+		position:absolute;
+		z-index:0;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.frontpage {
+		max-width:100%; 
+		position:absolute;
+		z-index:0;
+		transform:scale(4);
+	}
 }
 
 .frontheader {
